Plugin Name: CoursePress Pro
Author:      WPMU DEV (Irene, Marcin, Philipp, Marko, Jose, Rheinard)
Build Time:  BUILDTIME

CHANGELOG
=================================================

= 2.0.8 =
-------------------------------------------------

= 2.0.7 =
-------------------------------------------------
* Added: New "Paid" column on course list table.
* Added: Email validation on CoursePress signup form.
* Added: A sample course to fresh CoursePress installation.
* Added: No visible units message info.
* Added: Ability to sort by title for course_list shortcode.
* Added: Instructors notification for new enrolled students.
* Added: Text color option for basic certificate.
* Added: Preview without saving for basic and course certificates.

* Improved: Description on settings page.
* Improved: Compatibility with Avada theme.
* Improved: Disable WooCommerce guest checkout for courses checkout.
* Improved: Hide Install MarketPress message when WooCommerce Integration is active.
* Improved: Password strength for custom registration form.

* Updated: External library "select2" to version 4.0.2
* Updated: External library "jquery-chosen" to version 1.6.2
* Updated: External library "jquery-circle-progress" to version 1.2.1
* Updated: External font Awesome to version 4.7.0

* Fixed: Email placeholders.
* Fixed: "Continue Learning" link for required modules.
* Fixed: Warning messages on CoursePress configuration page when we use tab, which no longer exits.
* Fixed: Issue with tinymce edit unit page.
* Fixed: Dark screen when use "Save Progress & Exit" with discussion module.
* Fixed: Removed PHP warnings when adding units.
* Fixed: Next nav on IE.
* Fixed: Unable to progress to next module.

= 2.0.6.2 =
-------------------------------------------------
Fixed: HTML and entities issue on unit editor.
Fixed: Preview button.

= 2.0.6.1 =
-------------------------------------------------
* Fixed: Remove vulnerability to view any module.