@@ -60,7 +60,7 @@ class CoursePress_Admin_Table_Instructors extends WP_Users_List_Table {
 
 		$args = array(
 			'number' => $users_per_page,
-			'offset' => ( $paged-1 ) * $users_per_page,
+			'offset' => ( $paged -1 ) * $users_per_page,
 			'meta_key' => 'role_ins',
 			'meta_value' => 'instructor',
 			'fields' => 'all_with_meta',
@@ -74,11 +74,22 @@ class CoursePress_Admin_Table_Instructors extends WP_Users_List_Table {
 			$args['include'] = $instructor_ids;
 		}
 
-		if ( '' !== $args['search'] )
+		if ( '' !== $args['search'] ) {
 			$args['search'] = '*' . $args['search'] . '*';
+		}
 
-		if ( $this->is_site_users )
+		if ( $this->is_site_users ) {
 			$args['blog_id'] = $this->site_id;
+		}
+
+		/**
+		 * Fix multisite meta_key name
+		 */
+		if ( is_multisite() ) {
+			global $wpdb;
+			$args['blog_id'] = get_current_blog_id();
+			$args['meta_key'] = sprintf( '%s%s', $wpdb->prefix, $args['meta_key'] );
+		}
 
 		// Query the user IDs for this page
 		$wp_user_search = new WP_User_Query( $args );
