@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+* Fixed: Instructors screen on multisite installation.
 
 = 2.0.7 =
 -------------------------------------------------
